Changing locations to location..
Hadn't realised this had already been added with a slightly different
name.

--- a/mako/html/location_code,name,description,plants_columns.html
+++ b/mako/html/location_code,name,description,plants_columns.html
@@ -1,4 +1,4 @@
-## vim: set filetype=mako:
+# vim: set filetype=mako:
 <!DOCTYPE html>
 <html>
 <head>
@@ -73,8 +73,8 @@
   }
 </style>
 <body>
-  <% from bauble.plugins.report import get_locations_pertinent_to %>\
-  % for l in get_locations_pertinent_to(values):
+  <% from bauble.plugins.report import get_location_pertinent_to %>\
+  % for l in get_location_pertinent_to(values):
     <%
       plist=[]
       for plant in l.plants:
