More changing _locations_ to _location_

--- a/mako/html/species.html
+++ b/mako/html/species.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Values</title>
+  <title>Species</title>
   <meta charset="UTF-8">
 
 <style type="text/css" media="all">
