--- a/mako/html/plants.html
+++ b/mako/html/plants.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Values</title>
+  <title>Plants</title>
   <meta charset="UTF-8">
 
 <style type="text/css" media="all">
