More minor repairs

--- a/mako_misc/html_web/accs-accessions_basic.html
+++ b/mako_misc/html_web/accs-accessions_basic.html
@@ -4,6 +4,7 @@
 <head>
   <title>Accessions</title>
   <meta charset="UTF-8">
+</head>
 
 <style type="text/css" media="all">
   .value {
@@ -18,3 +19,4 @@
     <p class="value">${acc}</p>
   % endfor
 </body>
+</html>
