--- a/mako_misc/html_web/locs-location_code,name,description,plants_columns.html
+++ b/mako_misc/html_web/locs-location_code,name,description,plants_columns.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>Locations</title>
+</head>
 
 <style type="text/css" media="all">
   /* better printing */
@@ -97,3 +98,4 @@
     </div>
   % endfor
 </body>
+</html>
