--- a/mako_misc/shapefile_gis/plts-shapefile.html
+++ b/mako_misc/shapefile_gis/plts-shapefile.html
@@ -1,11 +1,12 @@
 ## vim: ft=mako:fdm=marker
 ## OPTION save_to_dir: (type: string, default: '{tmpdir}', tooltip: 'Directory to save the output, use {tmpdir} for the temp file system, ~ for home.')
 ## OPTION save_to_filenames: (type: string, default: 'plants', tooltip: 'common filename for the output files excluding the extension')
-## OPTION open_dir: (type: string, default: 'True', tooltip: 'This template will preduce several files that are all needed togther, this option allows you to choose to open the folder. To open set to 'true', anything else wont attempt to open anything')
+## OPTION open_dir: (type: string, default: 'True', tooltip: 'This template will produce several files that are all needed togther, this option allows you to choose to open the folder. To open set to 'true', anything else wont attempt to open anything')
 ## TODO the other option could be "single_layer" and it true we would use only one layer of points to make, lines would be broken into there dots and
 ## polygons could use the polylabel method to find their centers
 <%!
 import tempfile
+import random
 from os.path import expanduser
 from bauble.plugins.report import get_plants_pertinent_to, options
 import shapefile
@@ -14,19 +15,15 @@ from bauble.utils import desktop
 tempdir = tempfile.mkdtemp()
 dirname = expanduser(options.get('save_to_dir').format(tmpdir = tempdir))
 filename = dirname + '/' + options.get('save_to_filenames')
-epsg = 'GEOGCS["WGS 84",DATUM["WGS_1984",SPHEROID["WGS 84",6378137,298.257223563]],PRIMEM["Greenwich",0],UNIT["degree",0.0174532925199433]]'
+epsg = 'GEOGCS["GCS_WGS_1984",DATUM["D_WGS_1984",SPHEROID["WGS_1984",6378137,298.257223563]],PRIMEM["Greenwich",0],UNIT["Degree",0.017453292519943295]]'
 
-# create the PRJ file  TODO need to check this for our situation http://geospatialpython.com/2011/02/create-prj-projection-file-for.html
+# create the PRJ files  TODO need to check this for our situation http://geospatialpython.com/2011/02/create-prj-projection-file-for.html
 with open("{}_points.prj".format(filename), "w") as pnt_prj, \
      open("{}_lines.prj".format(filename), "w") as lin_prj, \
      open("{}_polygons.prj".format(filename), "w") as ply_prj:
     pnt_prj.write(epsg)
     lin_prj.write(epsg)
     ply_prj.write(epsg)
-
-with open("{}_lines.prj".format(filename), "w") as prj:
-    epsg = 'GEOGCS["WGS 84",DATUM["WGS_1984",SPHEROID["WGS 84",6378137,298.257223563]],PRIMEM["Greenwich",0],UNIT["degree",0.0174532925199433]]'
-    prj.write(epsg)
 
 %>\
 <%
@@ -35,14 +32,22 @@ with shapefile.Writer(filename + '_points') as pnts, \
      shapefile.Writer(filename + '_polygons')  as plys:
     # add basic fields to all three files
     for shp in [pnts, lins, plys]:
-        shp.field('plant', 'C', size=16)
+        shp.field('plt_id', 'N')
+        shp.field('accession', 'C', size=16)
+        shp.field('plt_code', 'C', size=16)
         shp.field('quantity', 'N')
         shp.field('family', 'C', size=126)
+        shp.field('genus', 'C', size=126)
         shp.field('species', 'C', size=126)
+        shp.field('infrasp', 'C', size=255)
+        shp.field('cultivar', 'C', size=126)
+        shp.field('vernacular', 'C', size=126)
         shp.field('bed', 'C', size=126)
+        shp.field('field_note', 'C', size=255)
         ## shp.field('source', 'C', size=126)
 
-    for plt in get_plants_pertinent_to(values):
+    plants = get_plants_pertinent_to(values)
+    for plt in plants:
 
         try:
             geo_point = plt.geo_point
@@ -67,11 +72,18 @@ with shapefile.Writer(filename + '_points') as pnts, \
             continue
 
         records = {
-          'plant': plt,
+          'plt_id': plt.id,
+          'accession': plt.accession.code,
+          'plt_code': plt.code,
           'quantity': plt.quantity,
-          'family': plt.accession.species.genus.family,
-          'species': plt.accession.species_str(),
+          'family': plt.accession.species.genus.family.epithet,
+          'genus': plt.accession.species.genus.epithet,
+          'species': plt.accession.species.epithet,
+          'infrasp': plt.accession.species.infraspecific_parts,
+          'cultivar': plt.accession.species.cultivar_epithet,
+          'vernacular': plt.accession.species.default_vernacular_name,
           'bed': plt.location.code,
+          'field_note': '',
         }
           ## 'source': plt.accession.source.source_detail.name
         if geo_point:
