--- a/mako_misc/html_web/spp-species_basic.html
+++ b/mako_misc/html_web/spp-species_basic.html
@@ -17,7 +17,7 @@
   <%
     from bauble.plugins.report import get_species_pertinent_to, options
   %>
-  % for sp in get_species_pertinent_to(values):
+  % for sp in get_species_pertinent_to(values, as_task=True):
     <p class="value">${sp.str(authors=options.get('authors'), markup=options.get('markup'))}</p>
   % endfor
 </body>
