--- a/mako_misc/html_web/vals-values_type_table.html
+++ b/mako_misc/html_web/vals-values_type_table.html
@@ -27,7 +27,7 @@
     from bauble import gui
     from bauble.utils import xml_safe
   %>
-  <p><span class="type">Search String: </span><code>${xml_safe(gui.widgets.main_comboentry.child.get_text())}</code>
+  <p><span class="type">Search String: </span><code>${xml_safe(gui.widgets.main_comboentry.get_child().get_text())}</code>
   <table>
     % for value in values:
     <tr>
